# ChangeLog for media-sound/patchage
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/patchage/ChangeLog,v 1.5 2008/09/17 06:43:20 aballier Exp $

  17 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  -files/patchage-0.4.1-gcc43.patch, -patchage-0.4.1.ebuild:
  remove old

*patchage-0.4.2 (17 Sep 2008)

  17 Sep 2008; Alexis Ballier <aballier@gentoo.org> +patchage-0.4.2.ebuild:
  version bump

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org> patchage-0.4.1.ebuild:
  Add ~x86 wrt #232865

*patchage-0.4.1 (09 Jul 2008)

  09 Jul 2008; Alexis Ballier <aballier@gentoo.org>
  +files/patchage-0.4.1-gcc43.patch, -patchage-0.4.0.ebuild,
  +patchage-0.4.1.ebuild:
  version bump

*patchage-0.4.0 (29 May 2008)

  29 May 2008; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
  +patchage-0.4.0.ebuild:
  initial import
