@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST patchage-0.4.2.tar.gz 404442 RMD160 0f96b143d0211cd83bcc83c1913afc21a834f421 SHA1 8cc79cdebf650d1dc8526a53cfeebe5742b29fb5 SHA256 b53b431a55f7f8fb77bb7c171bd70c3b58783640002623755408d8dfb0fb543a
-EBUILD patchage-0.4.2.ebuild 1074 RMD160 b46ddc7dd9d52c5098e74d47e1e9952fe05635bc SHA1 27634e85511d6843e9d5a8e963ba134c7448da9a SHA256 2ea76b18a25891ac80b2608818f5fd3412830f9df6aa1ab23b393c723c4060f5
-MISC ChangeLog 889 RMD160 f231f181ba55299bd5dc1f5b4b3d113f19d5e6b2 SHA1 e6b67ea1d8ae9f878a821b525020e23be11e1197 SHA256 fd6f5cfbb5a391d81660c8c8abefba0e136818fd4c0ec6acd61e612dcdc1d41c
+EBUILD patchage-0.4.2.ebuild 1074 RMD160 fed33ec2405df6765f337532433a611c5842ba04 SHA1 a650f5130cc91dfade1669d5368187cca0da6192 SHA256 54a7ec74121c64a23423aa4df8e4f5d6156ae69173a453b20696d39f3b5d4095
+MISC ChangeLog 1009 RMD160 0cd7324d69f08f74be86d60b21a56b0ad1b5e2d9 SHA1 62c197ec065bd95c3e01d01d6962bd97b850da4a SHA256 101f627cc9c2cf2e3e18ddbe072b553a32482f1ee7a21e880b73a41c0c4c41c6
 MISC metadata.xml 315 RMD160 906043633aa26c208f4a18af1987cb7982d874ee SHA1 f1141c783c52c1a87000b571d096206fe0caec90 SHA256 7586e9529bc03b4ebbc5f37f8c2971c4a022dd29896d3961e536cf69876b676d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkjQpw0ACgkQvFcC4BYPU0r3ZwCgwXXJps2elKEZa0aLpe/riOtv
-7cIAnR+eMT2K6PzRpR+DbpOSu5rN3Crh
-=6WO7
+iEYEARECAAYFAkjQqjIACgkQvFcC4BYPU0pMaQCfahjyHvEkC/4msrNdxJEui/so
+uKYAn2kUKoqeAJOMzhdu52mcd5plzkUY
+=Svhw
 -----END PGP SIGNATURE-----
