@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/patchage/patchage-0.4.2.ebuild,v 1.1 2008/09/17 06:40:35 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/patchage/patchage-0.4.2.ebuild,v 1.2 2008/09/17 06:56:45 aballier Exp $
 
 EAPI=1
 
@@ -13,8 +13,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="alsa dbus debug jack"
 
-RDEPEND=">=media-libs/raul-0.5.0
-	>=x11-libs/flowcanvas-0.5.0
+RDEPEND=">=media-libs/raul-0.5.1
+	>=x11-libs/flowcanvas-0.5.1
 	>=dev-cpp/gtkmm-2.11.12
 	dev-cpp/glibmm
 	dev-cpp/libglademm
