@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/patchage
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/patchage/ChangeLog,v 1.5 2008/09/17 06:43:20 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/patchage/ChangeLog,v 1.6 2008/09/17 06:56:45 aballier Exp $
+
+  17 Sep 2008; Alexis Ballier <aballier@gentoo.org> patchage-0.4.2.ebuild:
+  oops, forgot to bump raul/flowcanvas deps
 
   17 Sep 2008; Alexis Ballier <aballier@gentoo.org>
   -files/patchage-0.4.1-gcc43.patch, -patchage-0.4.1.ebuild:
